--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-datasets==2.0.0
-numpy==1.22.3
-tokenizers==0.11.6
-torch==1.10
-tqdm==4.63.0
-transformers==4.17.0
+datasets
+numpy
+tokenizers
+torch
+tqdm
+transformers
